feat: add MainLayout with footer & header

--- a/src/app/scss/components/_productCard.scss
+++ b/src/app/scss/components/_productCard.scss
@@ -1,32 +1,52 @@
+@use '../utils/colors' as *;
 
 .product_card {
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card_image {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-  }
-  
-  .card_info {
-    padding: 10px;
-  }
-  
-  .card_name {
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
-  
-  .card_brand,
-  .card_capacity,
-  .card_price {
-    font-size: 14px;
-    margin-bottom: 5px;
-  }
-  
+  display: flex;
+  border: 1px solid #e1e1e1;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 10px;
+  box-shadow: 0 2px 4px $bg-color;
+  max-width: 300px; // Ajusta el ancho máximo según tus preferencias
+  align-items: center;
+}
+
+.card_image {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 8px 0 0 8px;
+  overflow: hidden;
+}
+
+.card_info {
+  padding: 15px;
+}
+
+.card_name {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.card_brand,
+.card_capacity,
+.card_price {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.buy_button {
+  background-color: transparent;
+  color: $primary-color;
+  border: 1px solid $primary-color;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.buy_button:hover {
+  background-color: $primary-color;
+  color: #fff;
+}
