--- a/src/app/scss/components/_productForm.scss
+++ b/src/app/scss/components/_productForm.scss
@@ -1,49 +1,50 @@
+@use "../utils/colors" as *;
+
 .product_form_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  
-    .product_form {
-      width: 300px;
-      background-color: #f5f5f5;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  
-      .form_control {
-        margin-bottom: 15px;
-  
-        label {
-          display: block;
-          margin-bottom: 5px;
-          font-weight: bold;
-        }
-  
-        input,
-        select {
-          width: 100%;
-          padding: 8px;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          box-sizing: border-box;
-        }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
+  .product_form {
+    width: 300px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px $bg-color(0, 0, 0, 0.1);
+
+    .form_control {
+      margin-bottom: 15px;
+
+      label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
       }
-  
-      .submit_button {
+
+      input,
+      select {
         width: 100%;
-        padding: 10px;
-        background-color: #008080;
-        color: #fff;
-        border: none;
+        padding: 8px;
+        border: 1px solid $primary-color;
         border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-  
-        &:hover {
-          background-color: #006666;
-        }
+        box-sizing: border-box;
+      }
+    }
+
+    .submit_button {
+      width: 100%;
+      padding: 10px;
+      background-color: $primary-color;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: $primary-color;
       }
     }
   }
-  
+}
