style(cards & productsContainer): add new style

--- a/src/app/scss/components/components.scss
+++ b/src/app/scss/components/components.scss
@@ -1,5 +1,6 @@
 @forward './login';
 @forward './productForm';
+@forward './productContainer';
 @forward './productCard';
 @forward './header';
 @forward './footer';
