--- a/src/app/scss/components/_productCard.scss
+++ b/src/app/scss/components/_productCard.scss
@@ -1,14 +1,17 @@
-@use '../utils/colors' as *;
+@use "../utils/colors" as *;
 
 .product_card {
   display: flex;
   border: 1px solid #e1e1e1;
   border-radius: 8px;
   overflow: hidden;
-  margin: 10px;
+  margin: 6px;
   box-shadow: 0 2px 4px $bg-color;
   max-width: 300px; // Ajusta el ancho máximo según tus preferencias
   align-items: center;
+  padding: 12px;
+  
+  justify-content: center;
 }
 
 .card_image {
