build: deploy version

--- a/src/app/scss/components/_cart.scss
+++ b/src/app/scss/components/_cart.scss
@@ -1,64 +1,93 @@
 @use "../utils/colors" as *;
 
-.cartContainer {
-  position: relative;
-  cursor: pointer;
-  width: 10%;
+.cart {
   display: flex;
-  justify-content: center;
-  margin-right: 12px;
-}
+  flex-direction: column;
+  width: 20%;
+  justify-content: space-around;
+  align-items: center;
 
-.cartIcon {
-  font-size: 1.5rem;
-  margin-right: 8px;
-  transform: scale(1.6);
-}
-
-.cartItemCount {
-  position: absolute;
-  top: 16px;
-  right: 28px;
-  background-color: $primary-color;
-  color: white;
-  border-radius: 50%;
-  padding: 4px 8px;
-  font-size: 0.9rem;
-  p {
-    margin: 0;
+  .cartContainer {
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 12px;
   }
-}
 
-.cartDropdown {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: white;
-  border: 1px solid #ddd;
-  padding: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  .cartButton {
+    margin-top: 8px;
+    padding: 8px;
+    background-color: transparent;
+    color: $primary-color;
+    border: 1px solid $primary-color;
+    padding: 8px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s, color 0.3s;
 
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    li {
-      margin-bottom: 8px;
+    &:hover {
+      background-color: $primary-color;
+      color: #fff;
     }
   }
 
-  button {
-    margin-top: 8px;
-    padding: 8px;
-    background-color: #0070f3;
-    color: white;
-    border: none;
+  .buy_button {
+    background-color: transparent;
+    color: $primary-color;
+    border: 1px solid $primary-color;
+    padding: 8px 12px;
+    border-radius: 4px;
     cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .buy_button:hover {
+    background-color: $primary-color;
+    color: #fff;
+  }
+
+  .cartIcon {
+    font-size: 1.5rem;
+    margin-right: 8px;
+    transform: scale(1.6);
+  }
+
+  .cartItemCount {
+    position: absolute;
+    top: 16px;
+    right: 100px;
+    background-color: $primary-color;
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
     font-size: 0.9rem;
 
-    &:hover {
-      background-color: #0056b3;
+    p {
+      margin: 0;
+    }
+  }
+
+  .cartDropdown {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ddd;
+    padding: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        margin-bottom: 8px;
+      }
     }
   }
 }
