--- a/src/app/scss/components/_login.scss
+++ b/src/app/scss/components/_login.scss
@@ -5,7 +5,7 @@
 
 .loginContainer {
     max-width: 300px;
-    margin: 0 auto;
+    margin: 24px;
     padding: 40px;
     background: #f7f7f7;
     border: 1px solid #ccc;
